crates/typestate-pipeline/tests/ui/nightly/transition_without_into.stderr
error: `into = <Type>` is required in `#[transition(...)]`
  --> tests/ui/nightly/transition_without_into.rs:11:5
   |
11 |     #[transition()]
   |     ^^^^^^^^^^^^^^^
   |
   = help: declare the destination state, e.g. `#[transition(into = NextState)]`
